# Blackwall

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  fix_install.sh  pyproject.toml  quickstart.sh  reinstall_script.sh  requirements-dev.txt  requirements.txt  setup.py
docs/: README.md
scripts/: download_models.py
src/blackwall/: __init__.py  __main__.py  cli.py  config.py
src/blackwall/detectors/: __init__.py  base.py  image.py  text.py  video.py
src/blackwall/models/: __init__.py  model_loader.py
src/blackwall/models/weights/text_detector/: config.json
src/blackwall/output/: __init__.py  formatter.py
src/blackwall/utils/: __init__.py  exceptions.py  file_handler.py  logger.py
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/: test_file_handler.py  test_image_detector.py
